# Updated-PSA-sun-position-algorithm

./: CITATION.cff.txt  CMakeLists.txt  README.md
c++/: CMakeLists.txt
c++/src/: main.cpp  sunpos.cpp  sunpos.h
include/: sunpos.h
src/: main.cpp  sunpos.cpp
test_data/: MICA_reference_data.csv
